kutt/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kutt-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kutt-redirect@kubernetescrd
spec:
  tls:
    - secretName: kutt-cert
  rules:
    - host: s.sachiniyer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kutt
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: kutt
spec:
  redirectScheme:
    scheme: https
    permanent: true
